adção de links/ nav

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="logo-container">
-      <img src="assets/Logo_PE.svg" alt="Governo de Pernambuco" class="logo">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo-container">
+        <img src="assets/Logo_PE.svg" alt="Governo de Pernambuco" class="logo">
+      </div>
+      <nav class="nav-links">
+        <a href="#paineis" class="text-white me-3 text-decoration-none">Painéis</a>
+        <a href="#equipe" class="text-white text-decoration-none">Equipe</a>
+      </nav>
     </div>
   </header>
 
@@ -24,7 +30,8 @@
     <h2 class="section-title">Deseja obter um login e senha pela 1ª vez</h2>
     <ul class="custom-list">
       <li>Peça ao seu núcleo setorial de informática (NSI) para providenciar junto à DGA/ATI.</li>
-      <li>Caso sua secretaria não possua NSI, envie e-mail para <a href="mailto:lista-pcad@ati.pe.gov.br" class="link">lista-pcad@ati.pe.gov.br</a> para mais informações.</li>
+      <li>Caso sua secretaria não possua NSI, envie e-mail para <a href="mailto:lista-pcad@ati.pe.gov.br"
+          class="link">lista-pcad@ati.pe.gov.br</a> para mais informações.</li>
     </ul>
 
     <!-- Título 2 -->
