--- a/index.html
+++ b/index.html
@@ -7,75 +7,68 @@
   <title>Landing Page Simples</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="logo-container">
-        <img src="assets/Logo_PE.svg" alt="Governo de Pernambuco" class="logo">
-      </div>
-      <nav class="nav-links">
-        <a href="#paineis" class="text-white me-3 text-decoration-none">Painéis</a>
-        <a href="#equipe" class="text-white text-decoration-none">Equipe</a>
-      </nav>
+    <!-- retirar o comentario da div abaixo quando for fazer o menu funcional -->
+    <!-- <div class="container d-flex justify-content-between align-items-center"> -->
+      <a href="/"><img src="assets/Logo_PE.svg" alt="Governo de Pernambuco" class="logo"></a>
+      <!-- <nav class="nav-links">
+        <a href="#paineis">Painéis</a>
+        <a href="#equipe">Equipe</a>
+      </nav> -->
     </div>
   </header>
 
-  <!-- Main Content -->
-  <div class="main-content container py-5">
+  <!-- Conteúdo em grade -->
+  <div class="container">
+    <div class="grid-container">
 
-    <!-- Título 1 -->
-    <h2 class="section-title">Deseja obter um login e senha pela 1ª vez</h2>
-    <ul class="custom-list">
-      <li>Peça ao seu núcleo setorial de informática (NSI) para providenciar junto à DGA/ATI.</li>
-      <li>Caso sua secretaria não possua NSI, envie e-mail para <a href="mailto:lista-pcad@ati.pe.gov.br"
-          class="link">lista-pcad@ati.pe.gov.br</a> para mais informações.</li>
-    </ul>
+      <div class="card-info">
+        <h2>1. Obter login e senha pela 1ª vez</h2>
+        <ul>
+          <li>Peça ao seu núcleo setorial de informática (NSI) para providenciar junto à DGA/ATI.</li>
+          <li>Caso sua secretaria não possua NSI, envie e-mail para <a href="mailto:lista-pcad@ati.pe.gov.br">lista-pcad@ati.pe.gov.br</a>.</li>
+        </ul>
+      </div>
 
-    <!-- Título 2 -->
-    <h2 class="section-title">Já tem o login e deseja reset de senha</h2>
-    <ul class="custom-list">
-      <li>Envio de E-mail para <a href="mailto:csati@ati.pe.gov.br" class="link">csati@ati.pe.gov.br</a>, intitulado
-        "Power BI Report Server - Reset de Senha". Informar nome completo e e-mail institucional (@seplag.pe.gov.br).
-      </li>
-      <li>Após o atendimento da solicitação, a ATI envia e-mail com senha temporária para o endereço institucional.
-        Nele, seguem as instruções para alteração de senha.</li>
-      <li>Após alterar senha no link informado pela ATI, o acesso ao Report Server fica liberado com o uso da nova
-        senha.</li>
-    </ul>
+      <div class="card-info">
+        <h2>2. Resetar senha do Power BI</h2>
+        <ul>
+          <li>Envie e-mail para <a href="mailto:csati@ati.pe.gov.br">csati@ati.pe.gov.br</a> com nome completo e e-mail institucional.</li>
+          <li>Você receberá uma senha temporária com instruções para troca.</li>
+          <li>Após alterar a senha, o acesso será liberado.</li>
+        </ul>
+      </div>
 
-    <!-- Título 3 -->
-    <h2 class="section-title">Caso você já possua login e senha e não consegue logar</h2>
-    <ul class="custom-list">
-      <li>Clique no link: <a
-          href="https://alterasenha.powerbi.pe.gov.br/RDWeb/Pages/en-US/login.aspx?ReturnUrl=/RDWeb/Pages/en-US/Default.aspx"
-          class="link" target="_blank">Alterar Senha Power BI</a>.</li>
-      <li>Use <code>powerbi\</code> antes do nome de usuário e insira a senha atual. Clique em "click here".</li>
-      <li>Crie uma nova senha com os requisitos de complexidade exigidos.</li>
-    </ul>
+      <div class="card-info">
+        <h2>3. Já tem senha mas não consegue logar</h2>
+        <ul>
+          <li><a href="https://alterasenha.powerbi.pe.gov.br" target="_blank">Alterar Senha Power BI</a>.</li>
+          <li>Use <code>powerbi\</code> antes do nome de usuário e sua senha atual.</li>
+          <li>Crie nova senha com os requisitos exigidos.</li>
+        </ul>
+      </div>
 
+      <div class="card-info">
+        <h2>4. Acesso para secretarias externas à SEPLAG</h2>
+        <ul>
+          <li>Formatar termo de responsabilidade com base no modelo apropriado.</li>
+          <li>Enviar SEI para o IGPE.</li>
+          <li>Repassar login + número do SEI para <a href="mailto:ncd.igpe@gmail.com">ncd.igpe@gmail.com</a>.</li>
+        </ul>
+      </div>
 
-    <!-- Título 5 -->
-    <h2 class="section-title">É de uma secretaria externa à SEPLAG e deseja acessar o painel de Execução
-      Orçamentária</h2>
-    <ul class="custom-list">
-      <li>Formatar termo de responsabilidade sobre a utilização dos dados baseado no documento apropriado.</li>
-      <li>Enviar SEI para Instituto de Gestão (IG/SEPLAG).</li>
-      <li>Repassar seu login do Power BI Report Server para <a href="mailto:ncd.igpe@gmail.com"
-          class="link">ncd.igpe@gmail.com</a> junto com o número do SEI enviado.</li>
-    </ul>
+    </div>
   </div>
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logos">
-        <img src="assets/logo_PE_Dcinza.png" alt="Logo_PE" class="footer-logo-pe">
-        <img src="assets/IGPE.svg" alt="IGPE" class="footer-logo">
-      </div>
-    </div>
+    <img src="assets/logo_PE_Dcinza.png" alt="Logo_PE">
+    <img src="assets/IGPE.svg" alt="IGPE">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
