--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="grid-container">
 
       <div class="card-info">
-        <h2>1°. Obter login e senha pela 1ª vez</h2>
+        <h2>1. Obter login e senha pela 1ª vez</h2>
         <ul>
           <li>Peça ao seu núcleo setorial de informática (NSI) para providenciar junto à DGA/ATI.</li>
           <li>Caso sua secretaria não possua NSI, envie e-mail para <a href="mailto:lista-pcad@ati.pe.gov.br">lista-pcad@ati.pe.gov.br</a>.</li>
@@ -36,7 +36,7 @@
       </div>
 
       <div class="card-info">
-        <h2>2°. Resetar senha do Power BI</h2>
+        <h2>2. Resetar senha do Power BI</h2>
         <ul>
           <li>Envie e-mail para <a href="mailto:csati@ati.pe.gov.br">csati@ati.pe.gov.br</a> com nome completo e e-mail institucional.</li>
           <li>Você receberá uma senha temporária com instruções para troca.</li>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="card-info">
-        <h2>3°. Já tem senha mas não consegue logar</h2>
+        <h2>3. Já tem senha mas não consegue logar</h2>
         <ul>
           <li><a href="https://alterasenha.powerbi.pe.gov.br" target="_blank">Alterar Senha Power BI</a>.</li>
           <li>Use <code>powerbi\</code> antes do nome de usuário e sua senha atual.</li>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="card-info">
-        <h2>4°. Acesso para secretarias externas à SEPLAG</h2>
+        <h2>4. Acesso para secretarias externas à SEPLAG</h2>
         <ul>
           <li>Formatar termo de responsabilidade com base no modelo apropriado.</li>
           <li>Enviar SEI para o IGPE.</li>
