adição do link do termo de responsabilidade

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="card-info">
         <h2>4°. Acesso para secretarias externas à SEPLAG</h2>
         <ul>
-          <li>Formatar termo de responsabilidade com base no modelo apropriado.</li>
+          <li><a href="https://docs.google.com/document/d/1rNnvum7I27CsfKqE6_BVlUHSs1d1qOY3HVNKRPs-HXE/edit?tab=t.0">Formatar termo de responsabilidade</a> com base no modelo apropriado.</li>
           <li>Enviar SEI para o IGPE.</li>
           <li>Repassar login + número do SEI para <a href="mailto:ncd.igpe@gmail.com">ncd.igpe@gmail.com</a>.</li>
         </ul>
